fixed carousel titles

--- a/client/app/modules/home/templates/home.tpl.html
+++ b/client/app/modules/home/templates/home.tpl.html
@@ -3,19 +3,19 @@
         <li class="my-carousel" ng-repeat="challenge in challenges" >
             <section class="carousel-home center my-carousel" ng-if="challenge.intro == 1">
                 <img src="images/svg/logocaroussel.svg" alt="ideaWeaveLogo"/>
-                <h1>
+                <h1 class="md-headline">
                     Ideaweave is a platform for exchanging ideas and forming groups around exciting projects and solve problems.
                 </h1>
                 <p>
                     Organizations or individuals post challenges, which are like competitions, and people suggest projects that meet this challenge. Anyone can follow and join a project to help develop it.
                 </p>
                 <div>
-                    <md-button ui-sref="signup" class="md-raised md-button-colored">GET INVOLVED</md-button>
+                    <md-button ui-sref="signup" class="md-raised">GET INVOLVED</md-button>
                 </div>
             </section>
             <section class="my-carousel carousel-home  center" ng-if="challenge.intro == 2" >
                 <img src="images/svg/logocaroussel.svg" alt="ideaWeaveLogo"/>
-                <h1>
+                <h1 class="md-headline">
                     You would like to showcase your project to a growing public in order to find supporters, get advice from experts or simply test if you are communicating comprehensively?
                     <br>
                     Ideaweaves provides you with a dedicated space and feedback tools that are easy to use.
@@ -23,19 +23,19 @@
             </section>
             <section  layout="column"  class="my-carousel carousel-home center" ng-if="challenge.intro == 3">
                 <img src="images/svg/logocaroussel.svg" alt="ideaWeaveLogo" />
-                <h1 class="center">IdeaWeave provides a simple collaborative working environment, the possibility to organise and archive discussions, a clear visibility on the taks to be performed and the resources needed.</h1>
+                <h1 class="md-headline">IdeaWeave provides a simple collaborative working environment, the possibility to organise and archive discussions, a clear visibility on the taks to be performed and the resources needed.</h1>
             </section>
             <section ng-if="$index > 2" class="my-carousel carousel-home center">
-                <a ui-sref="challenge({cid : challenge.accessUrl})">
-                    <h1 class="center">{{challenge.title}}</h1>
-                    <img ng-if="challenge.banner" src="{{ challenge.banner }}" ui-sref="challenge({cid : challenge.accessUrl})">
-                </a>
+                <h1 class="md-headline">{{challenge.title}}</h1>
+                
+                <img ng-if="challenge.banner" src="{{ challenge.banner }}" ui-sref="challenge({cid : challenge.accessUrl})">
+                
                 <showtags entity="challenge"></showtags>
 
                 <div layout="row" layout-align="center center">
-                    <md-button ui-sref="challenge({cid : challenge.accessUrl})" class="md-raised md-button-colored">Take a look</md-button>
+                    <md-button ui-sref="challenge({cid : challenge.accessUrl})" class="md-raised">Take a look</md-button>
                     &nbsp;&nbsp;
-                    <md-button ui-sref="challenges.list({tag : 'all'})" class="md-raised md-button-colored">See more challenges</md-button>
+                    <md-button ui-sref="challenges.list({tag : 'all'})" class="md-raised">See more challenges</md-button>
                 </div>
             </section>
         </li>
