--- a/client/app/modules/idea/templates/idea.tpl.html
+++ b/client/app/modules/idea/templates/idea.tpl.html
@@ -1,5 +1,5 @@
 <md-content layout="column" layout-fill>
-    <md-toolbar scroll-shrink class="home-header">
+    <md-toolbar scroll-shrink>
         <div layout="column" class="content">
             <h1>
                 {{ idea.title }}
