--- a/client/app/modules/admin/profile/templates/modal/resetPassword.tpl.html
+++ b/client/app/modules/admin/profile/templates/modal/resetPassword.tpl.html
@@ -12,18 +12,18 @@
     </md-toolbar>
     <md-content>
         <form name='passf'>
-            <md-input-group>
+            <md-input-container>
                 <label for="currentPassword">Current Password</label>
-                <md-input type="password" id="currentPassword" ng-model="passwordInfo.currentPassword"></md-input>
-            </md-input-group>
-            <md-input-group>
+                <input type="password" id="currentPassword" ng-model="passwordInfo.currentPassword"></input>
+            </md-input-container>
+            <md-input-container>
                 <label for="newPassword">Your new Password</label>
-                <md-input type="password" id="newPassword" ng-model="passwordInfo.newPassword"></md-input>
-            </md-input-group>
-            <md-input-group>
+                <input type="password" id="newPassword" ng-model="passwordInfo.newPassword"></input>
+            </md-input-container>
+            <md-input-container>
                 <label for="newPassword2">Repeat your new password</label>
-                <md-input type="password" id="newPassword2" ng-model="passwordInfo.newPassword2"></md-input>
-            </md-input-group>
+                <input type="password" id="newPassword2" ng-model="passwordInfo.newPassword2"></input>
+            </md-input-container>
         </form>
     </md-content>
 </md-dialog>
