--- a/client/app/modules/admin/project/templates/modal/project-remove-modal.tpl.html
+++ b/client/app/modules/admin/project/templates/modal/project-remove-modal.tpl.html
@@ -19,10 +19,10 @@
 
                 <p>If you are sure, please type in the name of your project below and then click the confirm button</p>
             </div>
-                <md-input-group>
+                <md-input-container>
                     <label for="titleR">Name of your project</label>
-                    <md-input type="text" ng-model="projectTest.title" id="titleR" name="title" ng-pattern="projectTitle" required></md-input>
-                </md-input-group>
+                    <input type="text" ng-model="projectTest.title" id="titleR" name="title" ng-pattern="projectTitle" required></input>
+                </md-input-container>
                 <div ng-messages="removeProjectForm.title.$error" ng-if="!removeProjectForm.title.$pristine">
                     <div ng-message="pattern">
                         This is not the name of your project.
