--- a/client/app/modules/auth/templates/signin.tpl.html
+++ b/client/app/modules/auth/templates/signin.tpl.html
@@ -17,7 +17,7 @@
                 <label>Password</label>
                 <input id="password" type="password" name="password" ng-model="signin.password" required pattern=""/>
             </md-input-container>
-            <div ng-messages="signinForm.password.$error" ng-if="!signinForm.email.$pristine" ng-if="!signinForm.password.$pristine">
+            <div ng-messages="signinForm.password.$error" >
                 <div ng-message="required">
                     Password is required
                 </div>
@@ -49,7 +49,7 @@
             <div layout="row" layout-align="end end">
                 <md-input-container flex>
                     <label for="emailR">Email account</label>
-                    <md-input id="emailR" type="email" ng-model="resetPass.email" />
+                    <input id="emailR" type="email" ng-model="resetPass.email" />
                 </md-input-container>
                 <i class="fa fa-2x fa-envelope my-btn"></i>
             </div>
