--- a/client/app/modules/workspace/templates/modal/fileUploadModal.tpl.html
+++ b/client/app/modules/workspace/templates/modal/fileUploadModal.tpl.html
@@ -27,9 +27,9 @@
                 <input ng-if="!file" type="file" ng-file-select="fileSelected($files)"/>
             </div>
         </div>
-        <md-input-group ng-if="file">
+        <md-input-container ng-if="file">
             <label for="fileDescription">file description...</label>
-            <md-input id="fileDescription" type="text"  ng-model="file.description" style="width:100%"/>
-        </md-input-group>
+            <input id="fileDescription" type="text"  ng-model="file.description" style="width:100%"/>
+        </md-input-container>
     </md-content>
 </md-dialog>
