--- a/client/app/modules/idea/templates/ideas.tpl.html
+++ b/client/app/modules/idea/templates/ideas.tpl.html
@@ -1,10 +1,7 @@
 <section layout="column" layout-fill>
     <md-toolbar scroll-shrink class="md-theme-green">
         <div class="center">Ideas</div>
-        <md-button class="md-button-fab md-theme-green" ng-click="toggleLeft()" style="color:black;bottom:-24px;position:absolute; left :20px;z-index : inherit" hide-md>
-            <i class="fa fa-bars" style="font-size: 1.2em; top:3px;position:relative;z-index: 50"></i>
-        </md-button>
-        <md-button class="md-button-fab md-button-fab-bottom-right md-theme-green" ui-sref="createIdea" ng-if="currentUser" style="color:black;bottom:-24px;position:absolute; right:20px;z-index : inherit">
+        <md-button class="md-fab md-fab-accent" ui-sref="createIdea" ng-if="currentUser" style="color:black;bottom:-24px;position:absolute; right:20px;z-index : inherit">
             <i class="fa fa-plus" style="font-size: 1.2em; top:3px;position:relative;z-index: 50"></i>
         </md-button>
     </md-toolbar>
@@ -13,53 +10,51 @@
             Nothing to show yet... 
         </div>
         <md-list ng-show="ideas.length > 0">
-            <md-item ng-repeat="idea in ideas" class="item-list">
-                <md-item-content>
-                    <article class="md-tile-content">
-                        <a ui-sref="idea({ iid : idea._id })">
-                            <h1>{{ idea.title }}</h1>
-                        </a>
-                        <showtags entity="idea"></showtags>
-                        <div hide block-md>
-                            <p ng-bind-html="idea.brief"></p>
-                            <div layout="row">
-                                <div flex>
-                                    <span>
-                                    {{ idea.followers.length }}
-                                    </span>
-                                    <span>
-                                        Followers
-                                    </span>
-                                </div>
-                                <div flex>
-                                    <span>
-                                    {{ idea.challenges.length }}
-                                    </span>
-                                    <span>
-                                        Challenges
-                                    </span>
-                                </div>
-                                <div flex>
-                                    <span>
-                                    {{ idea.projects.length }}
-                                    </span>
-                                    <span>
-                                        Projects
-                                    </span>
-                                </div>
+            <md-list-item ng-repeat="idea in ideas" class="item-list">
+                <article class="md-tile-content">
+                    <a ui-sref="idea({ iid : idea._id })">
+                        <h1>{{ idea.title }}</h1>
+                    </a>
+                    <showtags entity="idea"></showtags>
+                    <div hide block-md>
+                        <p ng-bind-html="idea.brief"></p>
+                        <div layout="row">
+                            <div flex>
+                                <span>
+                                {{ idea.followers.length }}
+                                </span>
+                                <span>
+                                    Followers
+                                </span>
                             </div>
-                            <!-- <md-button ng-click="showProjects(idea._id,$index)" >
-                                show related projects
-                            </md-button>
-                            <md-button ng-click="showProjects(idea._id,$index)" >
-                                show related challenges
-                            </md-button> -->
+                            <div flex>
+                                <span>
+                                {{ idea.challenges.length }}
+                                </span>
+                                <span>
+                                    Challenges
+                                </span>
+                            </div>
+                            <div flex>
+                                <span>
+                                {{ idea.projects.length }}
+                                </span>
+                                <span>
+                                    Projects
+                                </span>
+                            </div>
                         </div>
+                        <!-- <md-button ng-click="showProjects(idea._id,$index)" >
+                            show related projects
+                        </md-button>
+                        <md-button ng-click="showProjects(idea._id,$index)" >
+                            show related challenges
+                        </md-button> -->
+                    </div>
 
 
-                    </article>
-                </md-item-content>
-            </md-item>
+                </article>
+            </md-list-item>
         </md-list>
     </md-content>
 </section>
